--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -166,3 +166,17 @@ a.secondary {
     filter: invert();
   }
 }
+
+.title {
+  color: #2a5bd7;
+  font-weight: 700;
+  font-size: 2.2rem;
+  margin-bottom: 18px;
+  text-align: center;
+}
+
+@media (max-width: 600px) {
+  .title {
+    font-size: 1.6rem;
+  }
+}
